examples/test/testpolicy15137.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15137
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key28: value33
      key32: value39
      key25: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value26
          key19: value15
          key1: value32
      podSelector:
        matchLabels:
          key34: value13
          key33: value43
